Add Go backend Block 5 form filling
